# mathlib

./: CMakeLists.txt
include/: Common.h  mathlib.h
src/: test.cpp
